--- a/views/tasks.ejs
+++ b/views/tasks.ejs
@@ -1,140 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-        integrity="sha384-..." crossorigin="anonymous" />
+  <head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      integrity="sha384-..."
+      crossorigin="anonymous"
+    />
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>it</title>
-</head>
+  </head>
 
-<body onload="hideCheckboxesAndButton()">
+  <body onload="hideCheckboxesAndButton()">
     <div class="left">
-        <div class="left_nav">
-            <center>
-                <a href="">
-                    <i class="fa-solid fa-hospital-user"></i>
-                    <p>Today's Patient</p>
-                </a>
-            </center>
-        </div>
-        <div class="left_nav">
-            <center>
-                <a href="">
-                    <i class="fa-solid fa-file-waveform"></i>
-                    <p>Patient Files</p>
-                </a>
-            </center>
-        </div>
-        <div class="left_nav">
-            <center>
-                <a href="">
-                    <i class="fas fa-tasks"></i>
-                    <p>Tasks</p>
-                </a>
-            </center>
-        </div>
-        <div class="left_nav">
-            <center>
-                <a href="">
-                    <i class="fas fa-flask"></i>
-                    <i class="fas fa-syringe"></i>
-                    <p>Tests</p>
-                </a>
-            </center>
-        </div>
+      <div class="left_nav">
+        <center>
+          <a href="">
+            <i class="fa-solid fa-hospital-user"></i>
+            <p>Today's Patient</p>
+          </a>
+        </center>
+      </div>
+      <div class="left_nav">
+        <center>
+          <a href="">
+            <i class="fa-solid fa-file-waveform"></i>
+            <p>Patient Files</p>
+          </a>
+        </center>
+      </div>
+      <div class="left_nav">
+        <center>
+          <a href="">
+            <i class="fas fa-tasks"></i>
+            <p>Tasks</p>
+          </a>
+        </center>
+      </div>
+      <div class="left_nav">
+        <center>
+          <a href="">
+            <i class="fas fa-flask"></i>
+            <i class="fas fa-syringe"></i>
+            <p>Tests</p>
+          </a>
+        </center>
+      </div>
     </div>
 
     <div class="right">
-        <% if (isDoctor) { %>
-            <h1 style="color: rgb(3, 49, 92)">Welcome, Doctor!</h1>
+      <% if (isDoctor) { %>
+      <h1 style="color: rgb(3, 49, 92)">Welcome, Doctor!</h1>
 
-            <% } else { %>
-                <h1 style="color: rgb(3, 49, 92)">You are not a doctor.</h1>
-                <!-- Other content for non-doctors -->
-                <% } %>
-                    <center>
-                        <div class="task_form">
-                            <form action="/tasks" method="post">
-                                <div>
-                                    <label for="patient_id">Patient ID:</label>
-                                    <input type="number" id="patient_id" name="patient_id" />
-                                </div>
-                                <input type="hidden" name="formType" value="addTask" />
-                                <!-- This line was added -->
-                                <div>
-                                    <label for="details">Details</label><br />
-                                    <textarea name="details" id="details" cols="30" rows="10"></textarea>
-                                </div>
-                                <button type="submit">Add Task</button>
-                            </form>
-                        </div>
-                    </center>
-                    <div class="task_under">
-                        <h1>Tasks List</h1>
+      <% } else { %>
+      <h1 style="color: rgb(3, 49, 92)">You are not a doctor.</h1>
+      <!-- Other content for non-doctors -->
+      <% } %>
+      <center>
+        <div class="task_form">
+          <form action="/tasks" method="post">
+            <div>
+              <label for="patient_id">Patient ID:</label>
+              <input type="number" id="patient_id" name="patient_id" />
+            </div>
+            <input type="hidden" name="formType" value="addTask" />
+            <!-- This line was added -->
+            <div>
+              <label for="details">Details</label><br />
+              <textarea
+                name="details"
+                id="details"
+                cols="30"
+                rows="10"
+              ></textarea>
+            </div>
+            <button type="submit">Add Task</button>
+          </form>
+        </div>
+      </center>
+      <div class="task_under">
+        <h1>Tasks List</h1>
 
-                        <!-- Submit Tasks Form -->
-                        <form id="submitTasksForm" action="/tasks" method="POST">
-                            <input type="hidden" name="formType" value="submitTasks" />
-                            <!-- This line was added -->
+        <!-- Submit Tasks Form -->
+        <form id="submitTasksForm" action="/tasks" method="POST">
+          <input type="hidden" name="formType" value="submitTasks" />
+          <!-- This line was added -->
 
-                            <ul>
-                                <%
-                                for (let i = 0, d = 0; i < tasks.length || d < done_task_nurse_info.length; i++, d++) {
-                                    const task = tasks[i];
-                                    const nurseInfo = done_task_nurse_info[d];
-                                %>
-                                    <div>
-                                        <input type="checkbox" name="taskIds" value="<%= task.task_id %>" />
-                                        <a class="delete" data-dtask="<%= task.task_id  %>" href="">Delete</a>
+          <ul>
+            <% for (let i = 0, d = 0; i < tasks.length || d <
+            done_task_nurse_info.length; i++, d++) { const task = tasks[i];
+            const nurseInfo = done_task_nurse_info[d]; %>
+            <div>
+              <input
+                type="checkbox"
+                name="taskIds"
+                value="<%= task.task_id %>"
+              />
+              <a class="delete" data-dtask="<%= task.task_id  %>" href=""
+                >Delete</a
+              >
 
-                                        <span> File ID: </span>
-                                        <%= task.file_id %>
-                                            <span>Task ID: </span>
-                                            <%= task.task_id %> <br />
-                                                <span>Task Ditails:</span>
-                                              <p class="task-details">  <%= task.details %></p> <br />
-                                                    <a>
-                                                        <span>Created by:</span>
-                                                        <%= task.doctor_name %> At: <%= task.added_date.toLocaleString()
-                                                                %>
-                                                    </a>
+              <span> File ID: </span>
+              <%= task.file_id %>
+              <span>Task ID: </span>
+              <%= task.task_id %> <br />
+              <span>Task Ditails:</span>
+              <p class="task-details"><%= task.details %></p>
+              <br />
+              <a class="created_by">
+                <span>Created by:</span>
+                <%= task.doctor_name %> At: <%= task.added_date.toLocaleString()
+                %>
+              </a>
 
-                                                    <% if (nurseInfo) { %>
-                                                        <span>Done By:</span> Nurse: <%= nurseInfo.name %>
-                                                    <% } %>
+              <% if (nurseInfo) { %>
+              <span>Done By:</span> Nurse: <%= nurseInfo.name %> <% } %>
 
-                                                                <!-- delete is not supported in html only get and post -->
-                                    </div>
-                                    <% } %>
-                            </ul>
-                            <button class="task_but" type="submit">Submit</button>
-                        </form>
-                    </div>
-                    <script>
-                        document.querySelectorAll("a.delete").forEach((trashcan) => {
-                            trashcan.addEventListener("click", (e) => {
-                                e.preventDefault(); // Prevent the default action of the link
+              <!-- delete is not supported in html only get and post -->
+            </div>
+            <% } %>
+          </ul>
+          <button class="task_but" type="submit">Submit</button>
+        </form>
+      </div>
+      <script>
+        document.querySelectorAll("a.delete").forEach((trashcan) => {
+          trashcan.addEventListener("click", (e) => {
+            e.preventDefault(); // Prevent the default action of the link
 
-                                const endpoint = `/tasks/${trashcan.dataset.dtask}`;
+            const endpoint = `/tasks/${trashcan.dataset.dtask}`;
 
-                                fetch(endpoint, {
-                                    method: "DELETE",
-                                })
-                                    .then((response) => response.json())
-                                    .then((data) => (window.location.href = data.redirect))
-                                    .catch((err) => console.error(err));
-                            });
-                        });
-                    </script>
+            fetch(endpoint, {
+              method: "DELETE",
+            })
+              .then((response) => response.json())
+              .then((data) => (window.location.href = data.redirect))
+              .catch((err) => console.error(err));
+          });
+        });
+      </script>
     </div>
     <script src="script.js"></script>
-</body>
-
-<<<<<<< HEAD
+  </body>
 </html>
-=======
-</html>
->>>>>>> 82b241461550de1ffa94060fffeb31e6178ee1b9
