--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,3 @@
-<% if(messages.error){ %> <%= messages.error %> <% } %>
 
 <!DOCTYPE html>
 <html lang="en">
@@ -18,11 +17,12 @@
           <input type="password" name="password" id="password" placeholder="Password"/>
           <br />
           <button type="submit">Login</button>
-
+<% if(messages.error){ %> <%= messages.error %> <% } %>
+<div class="login_error"></div>
         </form>
-
+    <a href="/register">register</a>
+        
       </center>
     </div>
-    <a href="/register">register</a>
   </body>
 </html>
