--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,8 @@
 <a href="/tasks">tasks</a> <!-- Link to tasks page -->
 <a href="/register">register</a>
 <a href="/admition">admition</a>
+<a href="/admissionPatient">admition</a>
+
 <a href="/AI">AI</a>
 
 <script>
