--- a/views/tasks.ejs
+++ b/views/tasks.ejs
@@ -13,7 +13,7 @@
     <title>it</title>
   </head>
 
-  <body onload="hideCheckboxesAndButton()">
+  <body class="Right_left_body" onload="hideCheckboxesAndButton()">
     <div class="left">
       <div class="left_nav">
         <center>
