--- a/views/AI.ejs
+++ b/views/AI.ejs
@@ -1,1 +1,68 @@
-<h1>hi hassan :)</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Add Text</title>
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+  <div class="container">
+    <div class="input-container">
+        <div class="text_enter"><h1 style="padding-bottom: 10px;">Enter Text⤵</h1></div>
+        <textarea id="textInput" placeholder="Type your text here..."></textarea>
+        <button onclick="sendMessage()" >Summarize</button>
+    </div>
+    <div class="response-container">
+      <p id="summarized">Summarized</p>
+
+        <div class="response" id="response"></div>
+    </div>
+</div>
+
+<script>
+  function sendMessage() {
+    const responseElement = document.getElementById("response");
+    responseElement.textContent = "";
+    responseElement.style.color = "black"; 
+
+    const textInput = document.getElementById('textInput').value.trim();
+    if (textInput === "") {
+      responseElement.textContent = "No Text Has Been Added!!!";
+      responseElement.style.color = "red"; 
+      responseElement.style.fontWeight = "bold"; 
+      return; // Prevent further execution if no text is entered
+    }
+    
+    fetch("http://127.0.0.1:5000/send_message", {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json",
+      },
+      body: JSON.stringify({ message: textInput }),
+    })
+    .then(response => {
+      if (!response.ok) {
+        throw new Error('Network response was not ok');
+      }
+      return response.json();
+    })
+    .then(data => {
+      const disease = data.disease;
+      if (data.confidence >= 0.2) {
+        responseElement.innerHTML = "<strong>Predicted Disease:</strong> " + disease;
+      } else {
+        responseElement.textContent = "Not enough information";
+        responseElement.style.color = "red";
+      }
+    })
+    .catch(error => {
+      console.error("Error:", error);
+      alert("An error occurred. Please try again later.");
+    });
+  }
+  </script>
+  
+</body>
+</html>
