--- a/views/register.ejs
+++ b/views/register.ejs
@@ -12,8 +12,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>it</title>
   </head>
-  <body >
-    <div class="left">
+  <body class="Right_left_body">
+    <div  class="left">
       <div class="left_nav">
         <center>
           <a href="">
