--- a/views/register.ejs
+++ b/views/register.ejs
@@ -60,6 +60,9 @@
          
             <input type="radio" id="doctorRole" name="role" value="b" required onchange="updateForm()">
             <label for="doctorRole">Doctor</label>
+
+            <input type="radio" id="admition" name="role" value="admition" required onchange="updateForm()">
+            <label for="admition">Admition</label>
           
           
             <input type="radio" id="nurseRole" name="role" value="a" required onchange="updateForm()">
