adding_admition_info_goto_file

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,9 @@
 <a href="/tasks">tasks</a> <!-- Link to tasks page -->
 <a href="/register">register</a>
 <a href="/admition">admition</a>
-<a href="/admissionPatient">admition</a>
+<a href="/admissionPatient">admition Patient</a>
+<a href="/file">file</a>
+
 
 <a href="/AI">AI</a>
 
