--- a/views/admition.ejs
+++ b/views/admition.ejs
@@ -1,13 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-..." crossorigin="anonymous" />
+  <head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      integrity="sha384-..."
+      crossorigin="anonymous"
+    />
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>it</title>
-</head>
-<body>
+  </head>
+  <body class="Right_left_body">
+    <div  class="left_add">
+      <div class="left_nav">
+        <center>
+          <a href="">
+            <i class="fa-solid fa-hospital-user"></i>
+            <p>Today's Patient</p>
+          </a>
+        </center>
+      </div>
+      <div class="left_nav">
+        <center>
+          <a href="">
+            <i class="fa-solid fa-file-waveform"></i>
+            <p>Patient Files</p>
+          </a>
+        </center>
+      </div>
+
+    </div>
+
+    <div class="right">
     <input type="text" style="margin-left: 20px;" class="it_search" id="searchInput" placeholder="Search..." onkeyup="searchFunction()" />
     <center>
         <div class="add_pat_container" style="margin-top: 20px;">
@@ -41,7 +67,7 @@
             </form>
         </div>
     <% }) %>
-
+    </div>
     <script>
         function searchFunction() {
             var input, filter, files, fileDiv, fileInfos, i, txtValue;
