--- a/views/admition.ejs
+++ b/views/admition.ejs
@@ -25,8 +25,8 @@
       <div class="left_nav">
         <center>
           <a href="">
-            <i class="fa-solid fa-file-waveform"></i>
-            <p>Patient Files</p>
+            <i class="fa-solid fa-file-waveform" style="color: #9fc2e1;"></i>
+            <p style="color: #9fc2e1;">Patient Files</p>
           </a>
         </center>
       </div>
@@ -38,16 +38,16 @@
     <center>
         <div class="add_pat_container" style="margin-top: 20px;">
             <h1 class="add_user_admi">Create File:</h1> 
-            <form action="/admition" method="post">
+            <form action="/admition" method="post" autocomplete="off">
                 <div>
                     <label for="patient_id">Patient ID:</label>
-                    <input type="number" id="patient_id" name="patient_id">
+                    <input type="number" id="patient_id" name="patient_id" required>
                     <label for="patient_name">patient name:</label>
-                    <input type="text" id="patient_name" name="patient_name">
+                    <input type="text" id="patient_name" name="patient_name"required>
                     <br><br>
                     <label for="phone_number" style="margin-bottom: 0px;">phone number</label>
                     <br>
-                    <input type="number" id="phone_number" name="phone_number" style="margin-top:0;">
+                    <input type="number" id="phone_number" name="phone_number" style="margin-top:0;" required>
                 </div>
                 <button type="submit">Add patient</button>
             </form>
