--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,7 +11,7 @@
     <div class="login_container">
       <center>
         <h1>login</h1>
-        <form action="/login" method="post">
+        <form action="/login" method="post" autocomplete="off">
             <input type="email" name="email" id="email" placeholder="Email" />
           <br />
           <input type="password" name="password" id="password" placeholder="Password"/>
