--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,8 @@
 <a href="/admition">admition</a>
 <a href="/admissionPatient">admition Patient</a>
 <a href="/file">file</a>
+<a href="/lab">file</a>
+
 
 
 <a href="/AI">AI</a>
