modify lab and add script to tasks

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
 <a href="/admition">admition</a>
 <a href="/admissionPatient">admition Patient</a>
 <a href="/file">file</a>
-<a href="/lab">file</a>
+<a href="/lab">lab</a>
 
 
 
