add scan and take data from admission patient to file

--- a/views/file.ejs
+++ b/views/file.ejs
@@ -27,7 +27,8 @@
     <option value="<%= rooms4.room_name %>"><%= rooms4.room_name %></option>
     <% }) %>
   </select>
+  <p><%= existingPatientId %></p>
+
   <button type="submit">Submit</button>
 </form>
-
 <script src="script.js"></script>
