--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,8 @@
 <a href="/admissionPatient">admition Patient</a>
 <a href="/file">file</a>
 <a href="/lab">lab</a>
+<a href="/scan">scan</a>
+
 
 
 
